--- a/site/src/pages/Home/Home.css
+++ b/site/src/pages/Home/Home.css
@@ -1,6 +1,47 @@
   /*-----------------------------------------------------*/
                         /*inicio*/
   /*-----------------------------------------------------*/
+  
+  .banner-container {
+    display: flex;
+    justify-content: center;
+}
+
+.banner-image {
+    max-height: auto;
+    min-width: 480px;
+    max-width: 1500px;
+    object-fit: cover;
+}
+
+section {
+    overflow-x: hidden;
+}
+
+.promocao-header {
+    display: flex;
+    justify-content: space-between;
+
+    padding: 15px 5%;
+}
+
+.promocao-header-title {
+    font-weight: 700;
+    color: #161616;
+}
+.categorias-quantidades {
+    display: flex;
+    justify-content: space-between;
+    padding: 15px 5%;
+}
+
+.categorias-titulo {
+    font-weight: 700;
+    color: #161616;
+    font-size: 1.3em;
+    position: relative;
+    margin: auto;
+}
 
 main {
     display: flex;
@@ -70,14 +111,65 @@ main {
 .price {
     color: #12AF50;
 }
-  
 
+  /*-----------------------------------------------------*/
+                        /*Carrino*/
+  /*-----------------------------------------------------*/
+
+.container-carrinho {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 80vh;
+    
+  }
+  
+  .box-carrinho {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: center;
+    width: 800px;
+    height: 300px;
+    background-color: #f0f0f0;
+    border-radius: 20px;
+    padding: 10px;
+    box-sizing: border-box;
+    margin: 0 auto;
+  }
+
+ 
+  .text-container-carrinho {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    padding: 10px 0;
+    box-sizing: border-box;
+    
+  }
+  
+  .name-carrinho {
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 5px;
+    text-align: left;
+  }
+  
+  .texto-estra-carrinho {
+    display: flex;
+    font-size: 16px;
+    color: #777;
+    text-align: center;
+    flex: 1;
+    justify-content: space-between;
+  }
+  
   /*-----------------------------------------------------*/
                         /*produtos*/
   /*-----------------------------------------------------*/
-
-  
-
 .item-container {
     display: flex;
     align-items: center;
@@ -234,7 +326,32 @@ main {
 .price-product {
     color: #12AF50;
 }
- 
+  /*-----------------------------------------------------*/
+                        /*Login*/
+  /*-----------------------------------------------------*/
+
+.formulario-login {  
+    width: 350px;
+    height: 500px;
+    padding: 40px;
+    background-color: #f0f0f0;
+    margin: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 10px;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+    margin: auto !important;
+}
+
+#login {
+width: 25%;
+padding: 40px;
+background-color: white;
+border-radius: 0.3em;
+}
+
 .centralizar {
 font-size: 1rem;
 color: black;
@@ -243,6 +360,31 @@ margin: 15px;
 text-align: center;
 margin-top: 10%;
 } 
+
+.imgen {
+display: block; /* Garante que a margem automática funcione corretamente */
+object-fit: cover;
+width: 250px;
+height: 150px;
+margin: 80px auto 0; /* Define a margem automática para centralizar horizontalmente e adiciona 50px de espaço acima */
+}
+
+input[type=text], input[type=password] {
+font-size: 1rem;
+background-color: inherit;
+outline: 0;
+border-width: 0 0 1px;
+border-color: #12AF50;
+margin-top: 50px;
+width: 280px;
+transition: width 2s, height 2s;
+transition-timing-function: linear;
+}
+
+.input-field{
+align-items: inherit;
+background-color: inherit;
+}
 
 button {
 background-color: #12AF50;
@@ -260,6 +402,12 @@ button:hover {
 opacity: 1;
 }
 
+.carousel-indicators{   
+    width: 100%;
+    height: 10px;
+
+    
+}
 
 #imagem{
 position: relative;
