--- a/site/src/conponents/Header/Header.css
+++ b/site/src/conponents/Header/Header.css
@@ -1,72 +1,80 @@
-main{
-    padding: 10px 70px;
+
+.navbar-nav {
+    align-items: center;
+    justify-content: center;
+}
+  
+.nav-item {
+    margin: 0 5px;
 }
 
-body {
-    background-color: rgb(255, 255, 255);
-    font-family: 'Lato', sans-serif;
-}
-.row{
-    margin: 0;
+.nav-link {
+    padding: 0.25rem 0.5rem;
 }
 
 .container {
     padding: 60px 0;
+    
 }
-p, li{
-    color: #ddd;
-    font-size: 14px;
-}
+
 /*---------------cabeçario---------*/
-header, .navbar{
-    background-color:  rgb(255, 255, 255);
+
+#nav-links-secondary{
+    justify-content: end;
 }
+
 #nav-container{
     padding-top: 10px;
-    padding-bottom: 0 auto; 
+    padding-bottom: 0 auto;
 }
 
 .navbar-brand{
     padding-inline: 9%;
     color: #f5f2f2;
 }
+
 @media (max-width: 1280px){
     .navbar-brand{
         padding-inline: 5%;
     }
 }
 
-
 #nav-links a {
     color: #12AF50;
 }
+
 #nav-container .nav-link:hover {
     text-decoration: underline;
     color: #f5f2f2;
     background-color: #12AF50;
     border-radius: 5px;
 }
+
 #nav-container .navbar-nav {
     display: flex;
     align-items: center;
 }
+
 #nav-container .navbar-nav img:hover {
     cursor: pointer;
     opacity: 0.8;
 }
+
 .navbar-expand-lg .navbar-nav .navlink{
     padding: 1rem .8rem;
 }
+
 .navbar-toggler {
     width: 100px;
 }  
+
 .navbar-collapse{
     justify-content: space-around;
 }
+
 #nav-container .navbar-toggler-icon {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 30'%3e%3cpath stroke='green' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
-    /* Change the color to the desired color */
-    }
+}
 /*-----------fim-cabeçario---------*/
 /*-------Roda-Pé-------*/
 footer {
